--- a/css/main.css
+++ b/css/main.css
@@ -30,24 +30,6 @@ body {
   line-height: 1.7;
 }
 
-.link {
-  font-weight: 500;
-  color: var(--title-text-color);
-  text-decoration: none;
-  transition: color var(--primary-transition);
-}
-
-.link.current::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  height: 4px;
-  width: 100%;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-}
-
 ul {
   padding: 0;
   margin: 0;
@@ -412,22 +394,55 @@ h3 {
   align-items: center;
 }
 
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+
+.site-nav__item + .site-nav__item {
+  margin-left: 50px;
+}
+
+.site-nav__link {
+  font-weight: 500;
+  color: var(--title-text-color);
+  text-decoration: none;
+  transition: color var(--primary-transition);
+}
+
+.site-nav__link.current {
+  color: var(--accent-color);
+  transition: color var(--primary-transition);
+  position: relative;
+}
+
+.site-nav__link.current::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 4px;
+  width: 100%;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+}
+
 .contacts-nav {
   display: flex;
   margin-left: auto;
   align-items: center;
 }
 
-.contacts.item {
+.contacts-nav__item {
   display: flex;
   align-items: center;
 }
 
-.contacts-nav .item + .item {
+.contacts-nav__item + .contacts-nav__item {
   margin-left: 50px;
 }
 
-.contact-link {
+.contacts-nav__link {
   display: flex;
   align-items: center;
   padding-top: 38px;
@@ -439,17 +454,17 @@ h3 {
   transition: color var(--primary-transition);
 }
 
-.contact-link:hover, .contact-link:focus {
+.contacts-nav__link:hover, .contacts-nav__link:focus {
   color: var(--accent-color);
 }
 
-.nav-icon {
+.contacts-nav__icon {
   margin-right: 10px;
   fill: currentColor;
   transition: fill var(--primary-transition);
 }
 
-.nav-icon:hover, .nav-icon:focus {
+.contacts-nav__icon:hover, .contacts-nav__icon:focus {
   fill: var(--accent-color);
   cursor: pointer;
 }
@@ -464,32 +479,14 @@ h3 {
   height: 24px;
 }
 
-.link.current {
-  transition: color var(--primary-transition);
-  color: var(--accent-color);
-}
-
-.link.current:hover, .link.current:focus {
-  color: var(--accent-color);
-}
-
-.site-nav {
-  display: flex;
-  margin-left: 93px;
-}
-
-.site-nav .item + .item {
-  margin-left: 50px;
-}
-
-.item .link {
+.site-nav__link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
 }
 
-.item .link.current {
-  position: relative;
+.site-nav__link:hover, .site-nav__link:focus {
+  color: var(--accent-color);
 }
 
 .hero-title {
