--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,22 +5,51 @@
   display: flex;
   align-items: center;
 }
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+.site-nav__item + .site-nav__item {
+  margin-left: 50px;
+}
+
+.site-nav__link {
+  font-weight: 500;
+  color: var(--title-text-color);
+  text-decoration: none;
+  transition: color var(--primary-transition);
+}
+.site-nav__link.current {
+  color: var(--accent-color);
+  transition: color var(--primary-transition);
+  position: relative;
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 4px;
+    width: 100%;
+    background-color: var(--accent-color);
+    border-radius: 2px;
+  }
+}
 
 .contacts-nav {
   display: flex;
   margin-left: auto;
   align-items: center;
 }
-.contacts.item {
+
+.contacts-nav__item {
   display: flex;
   align-items: center;
+  & + & {
+    margin-left: 50px;
+  }
 }
 
-.contacts-nav .item + .item {
-  margin-left: 50px;
-}
-
-.contact-link {
+.contacts-nav__link {
   display: flex;
   align-items: center;
   padding-top: 38px;
@@ -36,7 +65,7 @@
   }
 }
 
-.nav-icon {
+.contacts-nav__icon {
   margin-right: 10px;
   fill: currentColor;
   transition: fill var(--primary-transition);
@@ -56,28 +85,12 @@
   height: 24px;
 }
 
-.link.current {
-  transition: color var(--primary-transition);
-  color: var(--accent-color);
+.site-nav__link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   &:hover,
   &:focus {
     color: var(--accent-color);
   }
-}
-
-.site-nav {
-  display: flex;
-  margin-left: 93px;
-}
-
-.site-nav .item + .item {
-  margin-left: 50px;
-}
-.item .link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-.item .link.current {
-  position: relative;
 }
