Добавляет классы по  ВЕМ для секции Преимущества

--- a/css/main.css
+++ b/css/main.css
@@ -528,12 +528,26 @@ h3 {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
-.features.section {
+.features {
   padding-top: 94px;
   padding-bottom: 94px;
 }
 
-.features-list-title {
+.features-list {
+  display: flex;
+}
+
+.features-list__items + .features-list__items {
+  margin-left: 30px;
+}
+
+.features-icon {
+  padding: 25px 100px;
+  margin-bottom: 30px;
+  background-color: var(--button-background-color);
+}
+
+.features-list__title {
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 700;
@@ -543,23 +557,9 @@ h3 {
   text-transform: uppercase;
 }
 
-.features-list-text {
+.features-list__text {
   letter-spacing: 0.03em;
   width: 270px;
-}
-
-.features-list-items + .features-list-items {
-  margin-left: 30px;
-}
-
-.features-list {
-  display: flex;
-}
-
-.features-icon {
-  padding: 25px 100px;
-  margin-bottom: 30px;
-  background-color: var(--button-background-color);
 }
 
 .activity.section {
