--- a/css/main.css
+++ b/css/main.css
@@ -562,27 +562,31 @@ h3 {
   width: 270px;
 }
 
-.activity.section {
+.activity {
   padding-bottom: 94px;
 }
 
-.activity-list {
-  display: flex;
-}
-
-.activity-item:nth-child(-n + 2) {
-  margin-right: 30px;
-}
-
-.activity.section-title {
+.activity__title {
   margin-bottom: 50px;
 }
 
-.activity-item {
+.activity__list {
+  display: flex;
+}
+
+.activity__item {
   position: relative;
 }
 
-.activity-text {
+.activity__item:nth-child(-n + 2) {
+  margin-right: 30px;
+}
+
+.activity__img {
+  display: block;
+}
+
+.activity__text {
   position: absolute;
   display: flex;
   text-align: center;
@@ -598,10 +602,6 @@ h3 {
   justify-content: center;
   left: 0;
   bottom: 0;
-}
-
-.activity-img {
-  display: block;
 }
 
 .members.section {
