--- a/css/main.css
+++ b/css/main.css
@@ -123,7 +123,7 @@ h3 {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.modal-button {
+.modal__button {
   position: absolute;
   top: 0;
   right: 0;
@@ -138,20 +138,20 @@ h3 {
   background-color: var(--primary-background-color);
 }
 
-.modal-button:hover, .modal-button:focus {
+.modal__button:hover, .modal__button:focus {
   cursor: pointer;
 }
 
-.modal-button-icon {
+.modal__icon {
   transition: fill var(--primary-transition);
 }
 
-.modal-button:hover .modal-button-icon,
-.modal-button:focus .modal-button-icon {
+.modal__button:hover .modal__icon,
+.modal__button:focus .modal__icon {
   fill: var(--accent-color);
 }
 
-.modal-title {
+.modal__title {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
@@ -161,7 +161,11 @@ h3 {
   color: var(--title-text-color);
 }
 
-.modal-label {
+.modal__field {
+  margin-bottom: 10px;
+}
+
+.modal__label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
@@ -169,7 +173,11 @@ h3 {
   margin-bottom: 4px;
 }
 
-.modal-input {
+.input-wrapper {
+  position: relative;
+}
+
+.input {
   outline: none;
   width: 100%;
   height: 40px;
@@ -181,20 +189,29 @@ h3 {
   transition: border-color var(--primary-transition);
 }
 
-.modal-input:hover, .modal-input:focus {
+.input:hover, .input:focus {
   border-color: var(--accent-color);
   cursor: pointer;
 }
 
-.modal-input::placeholder {
+.input::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-field {
-  margin-bottom: 10px;
+.input__icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill var(--primary-transition);
 }
 
-.modal-textarea {
+.input:hover + .input__icon,
+.input:focus + .input__icon {
+  fill: var(--accent-color);
+}
+
+.modal__textarea {
   width: 100%;
   height: 120px;
   padding: 12px 16px;
@@ -204,6 +221,66 @@ h3 {
   padding: 12px 16px;
   font-size: 14px;
   color: rgba(117, 117, 117, 0.5);
+}
+
+.modal__checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.modal-check {
+  margin-right: 8px;
+}
+
+.modal-check:checked + .modal-check__text span {
+  background-color: var(--accent-color);
+  border: none;
+}
+
+.modal-check:checked + .modal-check__text svg {
+  fill: #ffffff;
+}
+
+.modal-check__text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--primary-text-color);
+}
+
+.modal-check__icon {
+  width: 15px;
+  height: 15px;
+  border: 2px solid #303030;
+  border-radius: 2px;
+  margin-right: 5px;
+}
+
+.modal-check__svg {
+  fill: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.conditions {
+  font-weight: 400;
+  text-decoration-line: underline;
+  text-decoration-skip-ink: none;
+  color: var(--accent-color);
+}
+
+.modal__submit-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
 }
 
 .submit-button {
@@ -224,146 +301,6 @@ h3 {
 .submit-button:hover {
   background-color: #188ce8;
   cursor: pointer;
-}
-
-.modal-checkbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-}
-
-.modal-check {
-  margin-right: 8px;
-}
-
-.modal-submit-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 30px;
-}
-
-.modal-icon {
-  position: absolute;
-  left: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  transition: fill var(--primary-transition);
-}
-
-.modal-input:hover + .modal-icon,
-.modal-input:focus + .modal-icon {
-  fill: var(--accent-color);
-}
-
-.input-wrapper.user {
-  position: relative;
-}
-
-.modal-check-text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 14px;
-  line-height: 1.71;
-  color: var(--primary-text-color);
-}
-
-.modal-check-icon {
-  width: 15px;
-  height: 15px;
-  border: 2px solid #303030;
-  border-radius: 2px;
-  margin-right: 5px;
-}
-
-.check-icon {
-  fill: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.modal-check:checked + .modal-check-text span {
-  background-color: var(--accent-color);
-  border: none;
-}
-
-.modal-check:checked + .modal-check-text svg {
-  fill: #ffffff;
-}
-
-.conditions {
-  font-weight: 400;
-  text-decoration-line: underline;
-  text-decoration-skip-ink: none;
-  color: var(--accent-color);
-}
-
-.subscription {
-  margin-left: 93px;
-}
-
-.subscription-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--text-accent-color);
-  margin-bottom: 20px;
-}
-
-.subscription-input {
-  width: 358px;
-  height: 50px;
-  margin-right: 12px;
-  font-size: 16px;
-  line-height: 1.25;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-}
-
-.subscription-input::placeholder {
-  padding: 15px 0 15px 16px;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.subscription-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-  height: 50px;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: var(--text-accent-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-color: transparent;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.subscription-form {
-  display: flex;
-}
-
-.letter-icon {
-  margin-left: 10px;
-  fill: var(--text-accent-color);
 }
 
 .nav-logo {
@@ -815,64 +752,73 @@ h3 {
   background-color: var(--footer-background-color);
 }
 
-.footer.section {
+.footer-wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
-.footer.container {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-}
-
-.footer.nav {
+.footer-nav {
   margin-bottom: 20px;
 }
 
-.footer-info-item {
+.footer-info__item {
   margin-bottom: 9px;
 }
 
-.footer-info .footer-address {
+.footer-info__address {
   text-decoration: none;
   font-style: normal;
   color: var(--text-accent-color);
   transition: color var(--primary-transition);
 }
 
-.footer-info .footer-address:hover, .footer-info .footer-address:focus {
+.footer-info__address:hover, .footer-info__address:focus {
   color: var(--accent-color);
 }
 
-.footer-info .footer-contacts {
+.footer-info__contacts {
   text-decoration: none;
   font-style: normal;
   color: rgba(255, 255, 255, 0.6);
   transition: color var(--primary-transition);
 }
 
-.footer-info .footer-contacts:hover, .footer-info .footer-contacts:focus {
+.footer-info__contacts:hover, .footer-info__contacts:focus {
   color: var(--accent-color);
 }
 
-.join {
-  width: 145px;
+.footer-social {
+  margin-left: 70px;
+}
+
+.footer-social__label {
   height: 16px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.03em;
+  line-height: 1.14;
   text-transform: uppercase;
-  color: #ffffff;
+  color: var(--text-accent-color);
 }
 
-.footer-icons-list {
+.social-list {
   display: flex;
   margin-top: 20px;
 }
 
-.footer-social-link {
+.social-list__items {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-list__items + .social-list__items {
+  margin-left: 10px;
+}
+
+.social-list__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -884,21 +830,68 @@ h3 {
   transition: background-color var(--primary-transition);
 }
 
-.footer-social-link:hover, .footer-social-link:focus {
+.social-list__link:hover, .social-list__link:focus {
   background-color: var(--accent-color);
 }
 
-.footer-icons {
-  margin-left: 70px;
+.subscription {
+  margin-left: 93px;
 }
 
-.footer-icons-items {
+.subscription__title {
+  font-weight: 700;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--text-accent-color);
+  margin-bottom: 20px;
+}
+
+.subscription__wrap {
+  display: flex;
+}
+
+.subscription__input {
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+  width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+}
+
+.subscription__input::placeholder {
+  padding: 15px 0 15px 16px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.subscription-button {
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 200px;
+  height: 50px;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--text-accent-color);
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-color: transparent;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.footer-icons-items + .footer-icons-items {
+.subscription-button__icon {
   margin-left: 10px;
+  fill: var(--text-accent-color);
 }
 /*# sourceMappingURL=main.css.map */
