--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -25,7 +25,7 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-.modal-button {
+.modal__button {
   position: absolute;
   top: 0;
   right: 0;
@@ -43,14 +43,14 @@
     cursor: pointer;
   }
 }
-.modal-button-icon {
+.modal__icon {
   transition: fill var(--primary-transition);
-  .modal-button:hover &,
-  .modal-button:focus & {
+  .modal__button:hover &,
+  .modal__button:focus & {
     fill: var(--accent-color);
   }
 }
-.modal-title {
+.modal__title {
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
@@ -59,14 +59,23 @@
   letter-spacing: 0.03em;
   color: var(--title-text-color);
 }
-.modal-label {
+.modal__field {
+  margin-bottom: 10px;
+}
+
+.modal__label {
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
   color: var(--primary-text-color);
   margin-bottom: 4px;
 }
-.modal-input {
+
+.input-wrapper {
+  position: relative;
+}
+
+.input {
   outline: none;
   width: 100%;
   height: 40px;
@@ -85,10 +94,19 @@
     color: rgba(117, 117, 117, 0.5);
   }
 }
-.modal-field {
-  margin-bottom: 10px;
+.input__icon {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill var(--primary-transition);
+  .input:hover + &,
+  .input:focus + & {
+    fill: var(--accent-color);
+  }
 }
-.modal-textarea {
+
+.modal__textarea {
   width: 100%;
   height: 120px;
   padding: 12px 16px;
@@ -100,6 +118,64 @@
   color: rgba(117, 117, 117, 0.5);
 }
 
+.modal__checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.modal-check {
+  margin-right: 8px;
+}
+.modal-check:checked + .modal-check__text span {
+  background-color: var(--accent-color);
+  border: none;
+}
+
+.modal-check:checked + .modal-check__text svg {
+  fill: #ffffff;
+}
+
+.modal-check__text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--primary-text-color);
+}
+
+.modal-check__icon {
+  width: 15px;
+  height: 15px;
+  border: 2px solid #303030;
+  border-radius: 2px;
+  margin-right: 5px;
+}
+
+.modal-check__svg {
+  fill: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.conditions {
+  font-weight: 400;
+  text-decoration-line: underline;
+  text-decoration-skip-ink: none;
+  color: var(--accent-color);
+}
+
+.modal__submit-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+}
 .submit-button {
   height: 50px;
   min-width: 200px;
@@ -117,138 +193,4 @@
     background-color: rgba(24, 140, 232, 1);
     cursor: pointer;
   }
-}
-
-.modal-checkbox {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-}
-.modal-check {
-  margin-right: 8px;
-}
-
-.modal-submit-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 30px;
-}
-
-.modal-icon {
-  position: absolute;
-  left: 12px;
-  top: 50%;
-  transform: translateY(-50%);
-  transition: fill var(--primary-transition);
-  .modal-input:hover + &,
-  .modal-input:focus + & {
-    fill: var(--accent-color);
-  }
-}
-
-.input-wrapper.user {
-  position: relative;
-}
-
-.modal-check-text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 14px;
-  line-height: 1.71;
-  color: var(--primary-text-color);
-}
-
-.modal-check-icon {
-  width: 15px;
-  height: 15px;
-  border: 2px solid #303030;
-  border-radius: 2px;
-  margin-right: 5px;
-}
-
-.check-icon {
-  fill: transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.modal-check:checked + .modal-check-text span {
-  background-color: var(--accent-color);
-  border: none;
-}
-
-.modal-check:checked + .modal-check-text svg {
-  fill: #ffffff;
-}
-
-.conditions {
-  font-weight: 400;
-  text-decoration-line: underline;
-  text-decoration-skip-ink: none;
-  color: var(--accent-color);
-}
-.subscription {
-  margin-left: 93px;
-}
-
-.subscription-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--text-accent-color);
-  margin-bottom: 20px;
-}
-
-.subscription-input {
-  width: 358px;
-  height: 50px;
-  margin-right: 12px;
-  font-size: 16px;
-  line-height: 1.25;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-  background-color: transparent;
-  border: 1px solid rgba(255, 255, 255, 0.3);
-  box-sizing: border-box;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  border-radius: 4px;
-  &::placeholder {
-    padding: 15px 0 15px 16px;
-    color: rgba(255, 255, 255, 0.6);
-  }
-}
-
-.subscription-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-  height: 50px;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
-  color: var(--text-accent-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-color: transparent;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.subscription-form {
-  display: flex;
-}
-.letter-icon {
-  margin-left: 10px;
-  fill: var(--text-accent-color);
 }
