--- a/css/main.css
+++ b/css/main.css
@@ -631,7 +631,7 @@ h3 {
   transition: fill var(--primary-transition);
 }
 
-.portfolio.section {
+.portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -642,13 +642,13 @@ h3 {
   justify-content: center;
 }
 
-.categories-item {
+.categories__item {
   margin-left: 8px;
   background-color: var(--button-background-color);
   border-radius: 4px;
 }
 
-.categories .button {
+.categories__button {
   color: var(--title-text-color);
   background-color: var(--button-background-color);
   font-family: inherit;
@@ -664,7 +664,7 @@ h3 {
   transition: color var(--primary-transition), background-color var(--primary-transition);
 }
 
-.categories .button:hover, .categories .button:focus {
+.categories__button:hover, .categories__button:focus {
   color: var(--text-accent-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -675,12 +675,7 @@ h3 {
   flex-wrap: wrap;
 }
 
-.work-list-img {
-  display: block;
-  width: 100%;
-}
-
-.work-list-item {
+.work-list__item {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
@@ -689,47 +684,33 @@ h3 {
   transition: box-shadow var(--primary-transition);
 }
 
-.work-list-item:hover, .work-list-item:focus {
+.work-list__item:hover, .work-list__item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.work-list-item:nth-child(3n) {
+.work-list__item:nth-child(3n) {
   margin-right: 0px;
 }
 
-.work-list-item:nth-last-child(-n + 3) {
+.work-list__item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
 
-.work-list-text {
-  color: var(--primary-text-color);
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.03em;
-}
-
-.work-list-link {
+.work-list__link {
   text-decoration: none;
 }
 
-.work-list-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
+.work-list__img {
+  display: block;
+  width: 100%;
 }
 
-.work-list-box {
-  padding: 20px 24px;
-}
-
-.work-list-wrapper {
+.overlay-wrapper {
   position: relative;
   overflow: hidden;
 }
 
-.work-list-wrapper-text {
+.overlay-wrapper__text {
   position: absolute;
   height: 100%;
   padding: 63px 24px;
@@ -744,8 +725,27 @@ h3 {
   background-color: rgba(33, 150, 243, 0.9);
 }
 
-.work-list-item:hover .work-list-wrapper-text {
+.work-list__item:hover .overlay-wrapper__text {
   transform: translateY(0%);
+}
+
+.work-list__box {
+  padding: 20px 24px;
+}
+
+.work-list__title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.work-list__text {
+  color: var(--primary-text-color);
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
 }
 
 .footer {
