--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,20 +1,19 @@
-.portfolio.section {
+.portfolio {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-
 .categories {
   display: flex;
   margin-bottom: 50px;
   justify-content: center;
 }
 
-.categories-item {
+.categories__item {
   margin-left: 8px;
   background-color: var(--button-background-color);
   border-radius: 4px;
 }
-.categories .button {
+.categories__button {
   color: var(--title-text-color);
   background-color: var(--button-background-color);
   font-family: inherit;
@@ -42,11 +41,8 @@
   display: flex;
   flex-wrap: wrap;
 }
-.work-list-img {
-  display: block;
-  width: 100%;
-}
-.work-list-item {
+
+.work-list__item {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
@@ -66,31 +62,19 @@
   }
 }
 
-.work-list-text {
-  color: var(--primary-text-color);
-  font-size: 16px;
-  line-height: 1.9;
-  letter-spacing: 0.03em;
-}
-.work-list-link {
+.work-list__link {
   text-decoration: none;
 }
-.work-list-title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
+
+.work-list__img {
+  display: block;
+  width: 100%;
 }
-.work-list-box {
-  padding: 20px 24px;
-}
-.work-list-wrapper {
+.overlay-wrapper {
   position: relative;
   overflow: hidden;
 }
-
-.work-list-wrapper-text {
+.overlay-wrapper__text {
   position: absolute;
   height: 100%;
   padding: 63px 24px;
@@ -103,7 +87,25 @@
   transition: transform var(--primary-transition);
   color: var(--primary-background-color);
   background-color: rgba(33, 150, 243, 0.9);
-  .work-list-item:hover & {
+  .work-list__item:hover & {
     transform: translateY(0%);
   }
+}
+.work-list__box {
+  padding: 20px 24px;
+}
+
+.work-list__title {
+  color: var(--title-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.work-list__text {
+  color: var(--primary-text-color);
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
 }
