--- a/css/main.css
+++ b/css/main.css
@@ -324,6 +324,8 @@ h3 {
 
 .page-header {
   border-bottom: 1px solid #ececec;
+  display: flex;
+  align-items: center;
 }
 
 .main-nav {
@@ -389,8 +391,8 @@ h3 {
 .contacts-nav__link {
   display: flex;
   align-items: center;
-  padding-top: 38px;
-  padding-bottom: 26px;
+  padding-top: 32px;
+  padding-bottom: 32px;
   font-weight: 500;
   text-decoration: none;
   font-style: normal;
