--- a/css/main.css
+++ b/css/main.css
@@ -23,11 +23,15 @@
 }
 
 body {
-  background-color: var(--primary-background-color);
+  background-color: salmon;
   color: var(--primary-text-color);
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   line-height: 1.7;
+}
+
+main {
+  background-color: aquamarine;
 }
 
 ul {
@@ -44,11 +48,28 @@ h3 {
 }
 
 .container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
+  width: 100%;
+  margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .section-title {
@@ -426,13 +447,12 @@ h3 {
 }
 
 .hero {
-  max-width: 1600px;
-  height: 600px;
+  display: block;
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-color: #c4c4c4;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero.jpg");
   background-repeat: no-repeat;
@@ -440,14 +460,31 @@ h3 {
   background-size: cover;
 }
 
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
+
 .hero__title {
   margin-bottom: 30px;
   color: var(--text-accent-color);
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.4;
+  font-size: 20px;
+  line-height: 1.62;
+  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__title {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero__button {
