--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,11 +1,10 @@
 .hero {
-  max-width: 1600px;
-  height: 600px;
+  display: block;
   text-align: center;
-  padding-top: 200px;
-  padding-bottom: 200px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  margin: 0 auto;
+  padding-top: 118px;
+  padding-bottom: 118px;
   background-color: #c4c4c4;
   background-image: linear-gradient(
       to right,
@@ -16,16 +15,36 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  // max-width: 1600px;
+  // height: 600px;
+  // text-align: center;
+  // padding-top: 200px;
+  // padding-bottom: 200px;
+  // margin-left: auto;
+  // margin-right: auto;
+  @media screen and (min-width: 1200px) {
+    max-width: 1600px;
+    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
 }
 
 .hero__title {
   margin-bottom: 30px;
   color: var(--text-accent-color);
   font-weight: 900;
-  font-size: 44px;
-  line-height: 1.4;
+  font-size: 20px;
+  line-height: 1.62;
+  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  // font-size: 44px;
+  // line-height: 1.36;
+  @media screen and (min-width: 1200px) {
+    font-size: 44px;
+    line-height: 1.36;
+  }
 }
 
 .hero__button {
