--- a/css/main.css
+++ b/css/main.css
@@ -450,6 +450,7 @@ h3 {
   display: block;
   text-align: center;
   width: 100%;
+  height: 400px;
   margin: 0 auto;
   padding-top: 118px;
   padding-bottom: 118px;
@@ -505,22 +506,68 @@ h3 {
 }
 
 .features {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .features-list {
-  display: flex;
+  display: block;
 }
 
-.features-list__items + .features-list__items {
-  margin-left: 30px;
+@media screen and (min-width: 768px) {
+  .features-list {
+    display: flex;
+    justify-content: space-around;
+    align-content: flex-start;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features-list {
+    justify-content: space-between;
+    align-content: space-between;
+  }
+}
+
+.features-list__items {
+  width: auto;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .features-list__items {
+    width: 45%;
+    flex-basis: 0.45;
+    margin: 0px 0.5% 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .features-list__items {
+    width: 270px;
+    margin: 0px;
+    margin-bottom: 0px;
+    flex-wrap: nowrap;
+    flex-basis: 0.25;
+  }
 }
 
 .features-icon {
-  padding: 25px 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 120px;
   margin-bottom: 30px;
+  margin-right: auto;
+  margin-left: auto;
   background-color: var(--button-background-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .features-icon {
+    width: 270px;
+  }
 }
 
 .features-list__title {
@@ -529,13 +576,7 @@ h3 {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
-}
-
-.features-list__text {
-  letter-spacing: 0.03em;
-  width: 270px;
 }
 
 .activity {
