--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -2,6 +2,7 @@
   display: block;
   text-align: center;
   width: 100%;
+  height: 400px;
   margin: 0 auto;
   padding-top: 118px;
   padding-bottom: 118px;
