--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,16 @@
   margin: -1px;
 }
 
+.hidden-on-mobile {
+  display: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .hidden-on-mobile {
+    display: block;
+  }
+}
+
 body {
   background-color: salmon;
   color: var(--primary-text-color);
