--- a/sass/utils/_hidden.scss
+++ b/sass/utils/_hidden.scss
@@ -10,3 +10,10 @@
   clip-path: inset(50%);
   margin: -1px;
 }
+
+.hidden-on-mobile {
+  display: none;
+  @media screen and (min-width: 1200px) {
+    display: block;
+  }
+}
