--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,11 @@ body {
   line-height: 1.7;
 }
 
+img {
+  display: block;
+  width: 100%;
+}
+
 main {
   background-color: aquamarine;
 }
@@ -520,6 +525,13 @@ h3 {
   padding-bottom: 60px;
 }
 
+@media screen and (min-width: 1200px) {
+  .features {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .features-list {
   display: block;
 }
@@ -632,30 +644,76 @@ h3 {
 }
 
 .members {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: var(--button-background-color);
 }
 
+@media screen and (min-width: 1200px) {
+  .members {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+}
+
 .members__title {
-  padding-bottom: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .members__title {
+    margin-bottom: 60px;
+  }
 }
 
 .members__list {
-  display: flex;
+  display: block;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .members__list {
+    display: flex;
+    justify-content: space-between;
+    align-content: flex-start;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .members__list {
+    justify-content: space-between;
+    align-content: space-between;
+  }
 }
 
 .members__item {
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  max-width: 270px;
-  border-radius: 0px 0px 4px 4px;
-  text-align: center;
+  margin-bottom: 30px;
+  padding-bottom: 16px;
   background-color: var(--primary-background-color);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
-.members__item:nth-child(-n + 3) {
-  margin-right: 30px;
+@media screen and (min-width: 768px) {
+  .members__item {
+    width: 45%;
+    flex-basis: 0.45;
+    margin: 0px 0.5% 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .members__item {
+    width: 270px;
+    margin: 0px;
+    margin-bottom: 0px;
+    flex-wrap: nowrap;
+    flex-basis: 0.25;
+  }
+  .members__item:nth-child(-n + 3) {
+    margin-right: 30px;
+  }
 }
 
 .members__box {
