--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -3,6 +3,10 @@
   // padding-bottom: 94px;
   padding-top: 60px;
   padding-bottom: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 .features-list {
   // display: flex;
