--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: salmon;
+  // background-color: salmon;
   color: var(--primary-text-color);
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
@@ -11,6 +11,6 @@ img {
   width: 100%;
 }
 main {
-  background-color: aquamarine;
+  // background-color: aquamarine;
 }
 // var(--primary-background-color)
