--- a/sass/layout/_members.scss
+++ b/sass/layout/_members.scss
@@ -14,6 +14,8 @@
   margin-bottom: 30px;
   @media screen and (min-width: 1200px) {
     margin-bottom: 60px;
+    line-height: 1.17;
+    font-size: 36px;
   }
 }
 
@@ -45,7 +47,7 @@
   @media screen and (min-width: 768px) {
     width: 45%;
     flex-basis: 0.45;
-    margin: 0px 0.5% 30px;
+    margin: 0px 0px 30px;
   }
   @media screen and (min-width: 1200px) {
     width: 270px;
