Добавляет адаптив для Футера

--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,12 @@ h3 {
   font-family: inherit;
   cursor: pointer;
   transition: box-shadow var(--primary-transition);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  border-color: transparent;
+  border-radius: 4px;
 }
 
 .backdrop {
@@ -959,18 +965,59 @@ h3 {
 
 .footer {
   background-color: var(--footer-background-color);
-}
-
-.footer-wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
+.footer-wrap {
+  display: block;
+  text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-wrap {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-around;
+    flex-flow: wrap;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-wrap {
+    text-align: left;
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+}
+
 .footer-nav {
+  padding-top: 0;
+  padding-bottom: 0;
   margin-bottom: 20px;
+  margin-right: 0;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-nav {
+    text-align: left;
+    align-content: flex-start;
+    justify-content: flex-start;
+  }
+}
+
+.footer-info {
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-info {
+    margin-bottom: 0px;
+  }
 }
 
 .footer-info__item {
@@ -999,22 +1046,35 @@ h3 {
   color: var(--accent-color);
 }
 
-.footer-social {
-  margin-left: 70px;
-}
-
 .footer-social__label {
-  height: 16px;
-  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--text-accent-color);
+  display: block;
+  margin-bottom: 10px;
 }
 
 .social-list {
   display: flex;
+  align-items: center;
+  justify-content: center;
   margin-top: 20px;
+  margin-bottom: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .social-list {
+    margin-bottom: 102px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .social-list {
+    align-items: right;
+    justify-content: flex-start;
+    margin-bottom: 0px;
+  }
 }
 
 .social-list__items {
@@ -1043,32 +1103,38 @@ h3 {
   background-color: var(--accent-color);
 }
 
-.subscription {
-  margin-left: 93px;
-}
-
 .subscription__title {
-  font-weight: 700;
+  font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--text-accent-color);
   margin-bottom: 20px;
 }
 
+@media screen and (min-width: 1200px) {
+  .subscription__title {
+    text-align: start;
+  }
+}
+
 .subscription__wrap {
-  display: flex;
+  display: block;
+  align-items: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription__wrap {
+    display: flex;
+  }
 }
 
 .subscription__input {
-  display: flex;
-  align-items: center;
-  box-sizing: border-box;
-  width: 358px;
+  display: block;
+  width: 90%;
   height: 50px;
-  margin-right: 12px;
+  margin: 0 auto 20px;
   font-size: 16px;
   line-height: 1.25;
-  letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -1081,22 +1147,36 @@ h3 {
   color: rgba(255, 255, 255, 0.6);
 }
 
+@media screen and (min-width: 768px) {
+  .subscription__input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription__input {
+    width: 358px;
+    margin-right: 12px;
+    margin-bottom: 0px;
+  }
+}
+
 .subscription-button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 200px;
-  height: 50px;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1.87;
-  letter-spacing: 0.06em;
+  padding: 10px 29px;
+  margin: 0 auto;
   color: var(--text-accent-color);
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-color: transparent;
-  border-radius: 4px;
-  cursor: pointer;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription-button {
+    justify-content: flex-start;
+    margin: 0px;
+  }
 }
 
 .subscription-button__icon {
