--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -2,4 +2,10 @@
   font-family: inherit;
   cursor: pointer;
   transition: box-shadow var(--primary-transition);
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  border-color: transparent;
+  border-radius: 4px;
 }
