Добавляет адаптив для модального окна с формой

--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -5,7 +5,9 @@ body {
   font-size: 14px;
   line-height: 1.7;
 }
-
+body.modal-open {
+  overflow: hidden;
+}
 img {
   display: block;
   width: 100%;
