--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,10 @@ body {
   line-height: 1.7;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 img {
   display: block;
   width: 100%;
@@ -136,8 +140,10 @@ h3 {
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 94px 15px;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity var(--primary-transition), background-color var(--primary-transition);
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -146,16 +152,27 @@ h3 {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 528px;
-  min-height: 581px;
-  padding: 40px;
   border-radius: 4px;
   background-color: var(--primary-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  padding: 40px;
+  position: relative;
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
+  }
 }
 
 .modal__button {
@@ -188,12 +205,9 @@ h3 {
 
 .modal__title {
   margin-bottom: 12px;
-  font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
 }
 
 .modal__field {
@@ -258,13 +272,18 @@ h3 {
   color: rgba(117, 117, 117, 0.5);
 }
 
+@media screen and (min-width: 1200px) {
+  .modal__textarea {
+    font-size: 12px;
+  }
+}
+
 .modal__checkbox {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
+  font-size: 12px;
+  line-height: 1.17;
 }
 
 .modal-check {
@@ -284,9 +303,16 @@ h3 {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   color: var(--primary-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-check__text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal-check__icon {
@@ -361,11 +387,35 @@ h3 {
   border-bottom: 1px solid #ececec;
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .main-nav {
   display: flex;
   align-items: center;
+}
+
+.menu-button {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
 }
 
 .site-nav {
