--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,27 +4,41 @@
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 94px 15px;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity var(--primary-transition),
     background-color var(--primary-transition);
+  overflow-y: scroll;
 }
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 528px;
-  min-height: 581px;
-  padding: 40px;
+  // position: absolute;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
+  // width: 528px;
+  // min-height: 581px;
   border-radius: 4px;
   background-color: var(--primary-background-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
+  padding: 40px;
+  position: relative;
+  @media screen and (min-width: 480px) {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 450px;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 528px;
+  }
 }
+
 .modal__button {
   position: absolute;
   top: 0;
@@ -52,12 +66,9 @@
 }
 .modal__title {
   margin-bottom: 12px;
-  font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--title-text-color);
 }
 .modal__field {
   margin-bottom: 10px;
@@ -116,15 +127,17 @@
   padding: 12px 16px;
   font-size: 14px;
   color: rgba(117, 117, 117, 0.5);
+  @media screen and (min-width: 1200px) {
+    font-size: 12px;
+  }
 }
 
 .modal__checkbox {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
+  font-size: 12px;
+  line-height: 1.17;
 }
 
 .modal-check {
@@ -143,9 +156,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   color: var(--primary-text-color);
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal-check__icon {
