--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,11 +2,33 @@
   border-bottom: 1px solid #ececec;
   display: flex;
   align-items: center;
+  position: relative;
 }
 .main-nav {
   display: flex;
   align-items: center;
 }
+.menu-button {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
 .site-nav {
   display: flex;
   margin-left: 93px;
